--- a/RL-sida1.html
+++ b/RL-sida1.html
@@ -8,6 +8,26 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <nav>
+        <div class="logo">
+            <h2>Rocket League</h2>
+        </div>
+        <ul class="nav-links">
+            <li>
+                <a href="https://sv.wikipedia.org/wiki/Rocket_League">Källa</a>
+            </li>
+            <li>
+                <a href="https://www.google.com/search?q=rocket+league&tbm=isch&source=lnms&sa=X&ved=0ahUKEwjU1o2Au63lAhWFs4sKHZ06DLgQ_AUIkwIoAQ&biw=1366&bih=663#imgrc=nfAd7gmbpTotvM">bild</a>
+            </li>
+        </ul>
+    </nav>
+    <div id="om-rl">
+        <h1>Om Rocket League</h1>
+        <p class="RL-info">Rocket League är ett väldigt populärt fordonsbaserad fotbollsspel. Spelet går ut på att man hamnar i ett lag med olika antal personer beroende vilket gamemode man väljer. Man ska alltså sammarbeta för att få in bollen i motsatta lagens mål (precis som i vanlig fotboll). <br><br> Man kör såklart med en bil och på spelplanet finns det såkallade <span style="background-color: #705966">"boosts"</span> som man kan använda för att föra fordonet snabbare samt hoppa och använda "boosten" och göra såkallade <span style="background-color: #705966">"aerials"</span> för att träffa bollen i luften.</p1>
+    </div>
+    <div id="hur-man-spelar">
+        <h3>Hur spelar man Rocket League?</h3>
+        <p class="RL-info">Man går in i en match, antingen 1v1, 2v2 eller 3v3. Det är dem mest populära, sedan finns det olika modes så som rumble m.m. <br><br> Man ska alltså med sitt lag sammarbeta för att få bollen i andra lagets mål. Principen är samma som i vanlig fotboll. Man ska alltså ha mer poäng än de andra laget när tiden går ut för att vinna.</p>
+    </div>
 </body>
 </html>
